src/styles.css
@import './fonts/fonts.css';

/* styles.css */

html,body
{
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}

.container-flex {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.card-avatar {
  text-align: center;
}

.card-avatar .img {
  width: 40%;
  border-radius: 2%;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  transition: 0.3s;
}

.card-avatar .img:hover {
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
}

.card {
    border-bottom: 1px solid #ccc;
    padding-bottom: 10px;
    margin-bottom: 20px;
}

.col-lg-9 {
  max-width: 95%;
  padding-left: 50px;
}

.navbar-dark .navbar-nav .nav-link {
  color: rgb(255, 255, 255);
}

.navbar .nav-link, .navbar .navbar-brand {
  color: #ffffff;
  font-size: .875rem;
}

.bg-primary {
  background-color: #fb8c00 !important;
}

.btn-primary {
  --bs-btn-color: #000;
  --bs-btn-bg: #007bff;
  --bs-btn-border-color: #007bff;
  --bs-btn-hover-color: #000;
  --bs-btn-hover-bg: #1a73e8;
  --bs-btn-hover-border-color: #1a73e8;
  --bs-btn-focus-shadow-rgb: 198, 26, 84;
  --bs-btn-active-color: #000;
  --bs-btn-active-bg: #007bff;
  --bs-btn-active-border-color: #007bff;
  --bs-btn-active-shadow: none;
  --bs-btn-disabled-color: #000;
  --bs-btn-disabled-bg: #007bff;
  --bs-btn-disabled-border-color: #007bff;
}

.btn-primary:hover, .btn.bg-gradient-primary:hover {
  background-color: #1a73e8;
  border-color: #1a73e8;
  box-shadow: 0 2px 2px #1b76d1, 0 2px 1px -2px #007bff, 0 1px 2px #007bff;
}

.btn-primary, .btn.bg-gradient-primary {
  box-shadow: 0 2px 2px #1b76d1, 0 2px 1px -2px #007bff, 0 1px 2px #007bff;
}

.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .btn.bg-gradient-primary:not(:disabled):not(.disabled).active, .btn.bg-gradient-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle, .show>.btn.bg-gradient-primary.dropdown-toggle {
  background-color: #007bff;
}

